--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.quascenta.petersroad.broadway">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />\
     <!-- Required for Google Login -->
@@ -123,6 +125,19 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             tools:ignore="DuplicateActivity" />
 
+        <activity
+            android:name="com.quascenta.QBlueLogger.activities.QppActivity"
+
+            android:windowSoftInputMode = "stateHidden"
+
+            android:label="@string/title_activity_qpp"
+            android:screenOrientation = "portrait" >
+
+        </activity>
+
+        <activity android:name="com.quascenta.QBlueLogger.activities.QppMainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
 
     </application>
 
