--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,5 @@ dependencies {
     compile files('libs/opencsv-3.8.jar')
     compile files('libs/hellocharts-library-1.5.8.jar')
     compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile files('libs/libqblueqpp.jar')
 }
