--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:value="@string/facebook_app_id" />
 
         <service android:name="com.quascenta.petersroad.services.SensorService" />
-
+        <service android:name="com.quascenta.BluetoothLoggingDevice.BluetoothLeService"/>
         <activity
             android:name="com.quascenta.petersroad.activities.MainActivity"
             android:label="@string/app_name"
@@ -106,13 +106,22 @@
 
 
         </activity>
-        <activity android:name="com.quascenta.logTag.main.activities.LogTagDashboardActivity"
-            android:label="Dashboard">
+        <activity android:name="com.quascenta.BluetoothLoggingDevice.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name="com.quascenta.BluetoothLoggingDevice.activity.BaseActivity"/>
+
+        <activity
+            android:name="com.quascenta.BluetoothLoggingDevice.activity.DeviceControlActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name="com.quascenta.logTag.main.activities.LogTagDashboardActivity"
+            android:label="Dashboard">
+
         </activity>
 
 
